Working on Stroke Preference tabs

--- a/Piranhas/Piranhas.csproj
+++ b/Piranhas/Piranhas.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\StrokePreferencesController.cs" />
     <Compile Include="Controllers\SwimmersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -244,6 +245,7 @@
     <Content Include="Views\Swimmers\Details.cshtml" />
     <Content Include="Views\Swimmers\Edit.cshtml" />
     <Content Include="Views\Swimmers\Index.cshtml" />
+    <Content Include="Views\StrokePreferences\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
