--- a/Piranhas/Piranhas.csproj
+++ b/Piranhas/Piranhas.csproj
@@ -174,6 +174,10 @@
     <Compile Include="Migrations\201504240441562_Swimmer to User.Designer.cs">
       <DependentUpon>201504240441562_Swimmer to User.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201504250411079_Swimmer preferences with IM.cs" />
+    <Compile Include="Migrations\201504250411079_Swimmer preferences with IM.Designer.cs">
+      <DependentUpon>201504250411079_Swimmer preferences with IM.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -263,6 +267,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201504240441562_Swimmer to User.resx">
       <DependentUpon>201504240441562_Swimmer to User.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201504250411079_Swimmer preferences with IM.resx">
+      <DependentUpon>201504250411079_Swimmer preferences with IM.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
